[package]
name = "nuls"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-textdocument = { git = "https://github.com/GiveMe-A-Name/lsp-textdocument.git", rev = "ad5525b" }
mktemp = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.32.0", features = ["fs", "io-std", "macros", "process", "rt-multi-thread", "time"] }
tower-lsp = "0.20.0"
